--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang='en'>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css"
         integrity="sha256-13EKEXRsynh3cmmNF1dlW6uvoC1SZVaW94bIHZQJoMU=" crossorigin="anonymous" />
@@ -12,13 +15,6 @@
 <body>
     <div class="container">
 
-        <!-- <div class="row">
-            <div class="card-panel blue">
-                <span id="project-title" class="text-white">
-                    Project Title
-                </span>
-            </div>
-        </div> -->
         <nav>
             <div class="nav-wrapper white">
                 <span class="brand-logo black-text left">Project Title</span>
@@ -34,7 +30,7 @@
 
         <div class="row" id="movie-row">
             <div id="poster-div" class="col s12 m6">
-                <img id="poster" class="responsive-img" src="/assets/images/poster_example.jpg">
+                <img id="poster" class="responsive-img" src="https://via.placeholder.com/350x255">
             </div>
             <div id="movie-info" class="col s12 m6">
                 <div class="card">
