--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- jQuery JS 3.1.0 -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/assets/javascript/omdb.js"></script>
+    <script src="/assets/javascript/itunes.js"></script>
 </head>
 
 <body>
