--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 
         <div class="row" id="music-row">
             <div class="col s12">
-                <div class="card center">
+                <div id='soundtrack-card' class="card center">
                     <div class="card-content">
                         <span class="card-title text-white">
                             <strong>Movie Soundtrack</strong>
                         </span>
-                        <table>
+                        <table id='tracks' class='highlight'>
                             <thead>
                                 <th>Song</th>
                                 <th>Artist</th>
-                                <th>length</th>
+                                <th>Preview</th>
                             </thead>
                         </table>
                     </div>
