fixed some referencing errors

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         integrity="sha256-13EKEXRsynh3cmmNF1dlW6uvoC1SZVaW94bIHZQJoMU=" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js" integrity="sha256-6DDZX77BrYnAmK9a3N3tvNPtyTIk1q1w9iW+UBtot3Y="
         crossorigin="anonymous"></script>
-        <!-- jQuery JS 3.1.0 -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="/assets/javascript/omdb.js"></script>
-    <script src="/assets/javascript/itunes.js"></script>
+    <!-- jQuery JS 3.1.0 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="./assets/javascript/omdb.js"></script>
+    <script src="./assets/javascript/itunes.js"></script>
 </head>
 
 <body>
