hooked up firebase. need to look into analyzing data.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
 
         </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyB0oTpmDKAlzuGtCJhUTjtf9eHhQtiOxlU",
+    authDomain: "project1-15540.firebaseapp.com",
+    databaseURL: "https://project1-15540.firebaseio.com",
+    projectId: "project1-15540",
+    storageBucket: "project1-15540.appspot.com",
+    messagingSenderId: "693020255011"
+  };
+  firebase.initializeApp(config);
+</script>
+
 </body>
 
 </html>
