--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         crossorigin="anonymous"></script>
     <!-- jQuery JS 3.1.0 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="./assets/javascript/omdb.js"></script>
-    <script src="./assets/javascript/itunes.js"></script>
+    <!-- <script src="./assets/javascript/omdb.js"></script>
+    <script src="./assets/javascript/itunes.js"></script> -->
+    <script src="./assets/javascript/logic.js"></script>
 </head>
 
 <body>
