--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       </div>
     </div>
-    <div class="parallax" id="poster"><img id="soundtrack-card" src="background1.jpg" alt="Movie poster"></div>
+    <div class="parallax" id="poster"><img id="bg-1" src="background1.jpg" alt="Movie poster"></div>
   </div>
 
 
@@ -92,7 +92,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img id='bg-2' src="background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 
@@ -131,7 +131,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img id="bg-3" src="background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
