--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Movies and Music</h1>
         <div class="row center">
-          <h5 class="header col s12 light">An innovative way to match your favorite production (like a movie) to its
+          <h5 class="header col s12 light btn-large">An innovative way to match your favorite production (like a movie) to its
             soundtrack!</h5>
         </div>
         <div class="row center">
-          <p id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get started by searching a production name above</a>
+          <p id="download-button" class="btn-large light">Get started by searching a production name above</a>
         </div>
         <br><br>
 
@@ -51,8 +51,8 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">movie_filter</i></h2>
-            <h5 id="movie-details-title" class="center card movie-snippet" value='synopsis'>Synopsis</h5>
+            <h2 class="center brown-text"><i class="material-icons">import_contacts</i></h2>
+            <h6 id="movie-details-title" class="center card movie-snippet" value='synopsis'>Synopsis</h6>
 
           </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 id="movie-details-title" class="center card movie-snippet" value='cast'>Cast</h5>
+            <h6 id="movie-details-title" class="center card movie-snippet" value='cast'>Cast</h6>
 
 
           </div>
@@ -69,8 +69,29 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">textsms</i></h2>
-            <h5 id="movie-details-title" class="center card movie-snippet" value='reviews'>Reviews</h5>
+            <h6 id="movie-details-title" class="center card movie-snippet" value='reviews'>Reviews</h6>
+</div>
+<div class="row">
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">filter_none</i></h2>
+            <h6 id="movie-details-title" class="center card movie-snippet" value='genre'>Genre</h6>
 
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">stars</i></h2>
+            <h6 id="movie-details-title" class="center card movie-snippet" value='rating'>Rating</h6>
+
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">access_time</i></h2>
+            <h6 id="movie-details-title" class="center card movie-snippet" value='runtime'>Runtime</h6>
 
           </div>
         </div>
@@ -88,7 +109,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Cool movie, huh? Now here's the music!</h5>
+          <h5 class="header col s12 light btn-large">Cool movie, huh? Now here's the music!</h5>
         </div>
       </div>
     </div>
