--- a/index.html
+++ b/index.html
@@ -141,13 +141,11 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our
-            full time job. Any amount would help support and continue development on this project and is greatly
-            appreciated.</p>
+          <p class="grey-text text-lighten-4">We hope you like our product and that it makes your life a bit easier! Check us out if you like our style.</p>
 
 
         </div>
-        <div class="col l3 s12">
+        <!-- <div class="col l3 s12">
           <h5 class="white-text">Settings</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -155,14 +153,14 @@
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
-        </div>
+        </div> -->
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">Kevin Davis</a></li>
+            <li><a class="white-text" href="https://kteacherbecomescoder.github.io/">Eric Guerrero</a></li>
+            <li><a class="white-text" href="https://wherding.github.io/">Will Herding</a></li>
+            <li><a class="white-text" href="https://benvanmaren.github.io/">Ben Van Maren</a></li>
           </ul>
         </div>
       </div>
