buttons hooked up, and gallery added

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">textsms</i></h2>
-            <h6 id="movie-details-title" class="center card movie-snippet" value='reviews'>Reviews</h6>
+            <h2 class="center brown-text"><i class="material-icons">image</i></h2>
+            <h6 id="movie-details-title" class="center card movie-snippet" value='gallery'>Gallery</h6>
 </div>
 <div class="row">
           </div>
