--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <div class="row center">
           <p id="download-button" class="btn-large light">Get started by searching a production name above</a>
         </div>
-        <br><br>
+        <br>
+        <div class="row center popularMovies">
+
+        </div>
 
       </div>
     </div>
@@ -148,7 +151,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+         
         </div>
       </div>
     </div>
@@ -184,11 +187,6 @@
             <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
         </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
