refactoring before adding alternate results

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </div>
     <div class = "card" id="movie-info">
       <span id="movie-details-space">
+        Search a movie at the top to learn more about it
       </span>
     </div>
   </div>
@@ -187,6 +188,7 @@
   <script src="assets/javascript/materialize.js"></script>
   <script src="assets/javascript/init.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
+  <script src="./assets/javascript/functions.js"></script>
   <script src="./assets/javascript/logic.js"></script>
   <script>
 
