--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       </div>
     </div>
-    <div class="parallax" id="poster"><img id="bg-1" src="background1.jpg" alt="Movie poster"></div>
+    <div class="parallax" id="poster"><img id="bg-1" src="./assets/images/background1.jpg" alt="Movie poster"></div>
   </div>
 
 
@@ -117,7 +117,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img id='bg-2' src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img id='bg-2' src="./assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 
@@ -157,7 +157,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img id="bg-3" src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img id="bg-3" src="./assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
