set up alternate movie modal, buttons need to search for new movie

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Movies and Music</h1>
         <div class="row center">
-          <h5 class="header col s12 light btn-large">An innovative way to match your favorite production (like a movie) to its
+          <h5 class="header col s12 light btn-large">An innovative way to match your favorite production (like a movie)
+            to its
             soundtrack!</h5>
         </div>
         <div class="row center">
@@ -73,8 +74,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">image</i></h2>
             <h6 id="movie-details-title" class="center card movie-snippet" value='gallery'>Gallery</h6>
-</div>
-<div class="row">
+          </div>
+          <div class="row">
           </div>
         </div>
         <div class="col s12 m4">
@@ -101,13 +102,23 @@
       </div>
 
     </div>
-    <div class = "card" id="movie-info">
+    <div class="card" id="movie-info">
       <span id="movie-details-space">
         Search a movie at the top to learn more about it
-      </span>
     </div>
   </div>
 
+  <a id="alt-movies-btn" class="waves-effect waves-light btn modal-trigger" href="#alt-movies">Modal</a>
+
+  <!-- Modal Structure -->
+  <div id="alt-movies" class="modal">
+    <div class="modal-content">
+      <h4>One of these maybe?</h4>
+      <div id="alt-movies-card-area">
+
+      </div>
+    </div>
+  </div>
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
@@ -165,7 +176,8 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Team Matrix</h5>
-          <p class="grey-text text-lighten-4">We are a team of four aspiring (and in training) Full Stack Web Developers and this is our first project.</p>
+          <p class="grey-text text-lighten-4">We are a team of four aspiring (and in training) Full Stack Web
+            Developers and this is our first project.</p>
 
         </div>
 
