more house-cleaning

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
   </div>
 
-  <a id="alt-movies-btn" class="waves-effect waves-light btn modal-trigger" href="#alt-movies">Modal</a>
+  <a id="alt-movies-btn" class="waves-effect waves-light btn modal-trigger" href="#alt-movies">Not what you're looking for?</a>
 
   <!-- Modal Structure -->
   <div id="alt-movies" class="modal">
