--- a/index.html
+++ b/index.html
@@ -100,9 +100,19 @@
 
           </div>
         </div>
+        <div class="col s12 m4 modal-trigger movie-snippet" href="#movie-info-modal" value="soundtrack">
+          <div class="icon-black">
+            <h2 class="center brown-text"><i class="material-icons">audiotrack</i></h2>
+            <h6 id="movie-details-title" class="center card movie-snippet">Soundtrack</h6>
+          </div>
+        </div>
+
       </div>
 
     </div>
+
+
+
     <div class="modal" id="movie-info-modal">
       <div id="movie-details-space" class="modal-content">
 
