fixed index that I broke... added play button for audio. Now table is mobile responsive.

--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">stars</i></h2>
             <h6 id="movie-details-title" class="center card movie-snippet" value='rating'>Rating</h6>
-
           </div>
         </div>
+
         <div class="col s12 m4 modal-trigger movie-snippet" href="#movie-info-modal" value='runtime'>
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">access_time</i></h2>
             <h6 id="movie-details-title" class="center card movie-snippet">Runtime</h6>
-
           </div>
         </div>
-        <div class="col s12 m4 modal-trigger movie-snippet" href="#movie-info-modal" value="soundtrack">
-          <div class="icon-black">
+
+        <!-- <div class="col s12 m4 modal-trigger movie-snippet" href="#movie-info-modal" value='soundtrack'>
+          <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">audiotrack</i></h2>
             <h6 id="movie-details-title" class="center card movie-snippet">Soundtrack</h6>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
     </div>
-
+</div>
 
 
     <div class="modal" id="movie-info-modal">
@@ -119,7 +119,7 @@
       </div>
     </div>
 
-    <a id="alt-movies-btn" class="waves-effect waves-light btn modal-trigger" href="#alt-movies">Not what you're
+    <a id="alt-movies-btn" class="modal-trigger" href="#alt-movies">Not what you're
       looking for?</a>
 
     <div id="alt-movies" class="modal">
