--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="white nav-extended" role="navigation">
+  <nav class="white nav" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" class="brand-logo">MOVIE SEARCH:</a>
       <a href='#' data-target='side-nav' class="sidenav-trigger"><i class="material-icons">search</i></a>
@@ -24,18 +24,24 @@
       </div>
     </div>
 
-  <div class="nav-content">
-    <ul class="tabs">
-      <li class="tab disabled"><a class="grey-text" href='#'>Popular Searches</a></li>
-      <li class="tab"><a class="black-text">Movie 1</a></li>
-      <li class="tab"><a class="black-text">Movie 2</a></li>
-      <li class="tab"><a class="black-text">Movie 3</a></li>
-    </ul>
-  </div>
+    <div class="nav-content">
+      <ul class="tabs">
+        <li class="tab disabled"><a class="grey-text" href='#'>Popular Searches</a></li>
+        <li class="tab"><a class="black-text">Movie 1</a></li>
+        <li class="tab"><a class="black-text">Movie 2</a></li>
+        <li class="tab"><a class="black-text">Movie 3</a></li>
+      </ul>
+    </div>
   </nav>
 
   <ul class="sidenav" id="side-nav">
-    <li><i class="material-icons">search</i><input id="side-search" type="search"></li>
+    <li>
+      <div class="search-wrapper">
+
+        <input id="side-search" type="search" placeholder="Search">
+        <button type="submit" class="btn light">Submit</button>
+      </div>
+    </li>
   </ul>
 
 
@@ -44,20 +50,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Movies and Music</h1>
-        <div class="row center">
-          <h5 class="header col s12 light btn-large">An innovative way to match your favorite production (like a movie)
-            to its
-            soundtrack!</h5>
-        </div>
-        <div class="row center">
-          <p id="download-button" class="btn-large light">Get started by searching a production name above</a>
-        </div>
-        <br>
-        <div class="row center popularMovies">
-
-        </div>
-
+        <h1 id="title" class="header center red-text text-darken-4">Movies and Music</h1>
       </div>
     </div>
     <div class="parallax" id="poster"><img id="bg-1" src="./assets/images/background1.jpg" alt="Movie poster"></div>
@@ -115,133 +108,130 @@
             <h6 id="movie-details-title" class="center card movie-snippet">Runtime</h6>
           </div>
         </div>
-
-        <!-- <div class="col s12 m4 modal-trigger movie-snippet" href="#movie-info-modal" value='soundtrack'>
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">audiotrack</i></h2>
-            <h6 id="movie-details-title" class="center card movie-snippet">Soundtrack</h6>
-          </div>
-        </div> -->
-
       </div>
 
     </div>
-</div>
+    <div class="valign center">
+      <a id="alt-movies-btn" class="modal-trigger red-text text-darken-4 valign center-block" href="#alt-movies">Not
+        what
+        you're
+        looking for?</a>
+    </div>
+  </div>
 
 
-    <div class="modal" id="movie-info-modal">
-      <div id="movie-details-space" class="modal-content">
+  <div class="modal" id="movie-info-modal">
+    <div id="movie-details-space" class="modal-content">
+
+    </div>
+  </div>
+
+
+
+  <div id="alt-movies" class="modal">
+    <div class="modal-content">
+      <h4>One of these maybe?</h4>
+      <div id="alt-movies-card-area">
 
       </div>
     </div>
+  </div>
 
-    <a id="alt-movies-btn" class="modal-trigger" href="#alt-movies">Not what you're
-      looking for?</a>
-
-    <div id="alt-movies" class="modal">
-      <div class="modal-content">
-        <h4>One of these maybe?</h4>
-        <div id="alt-movies-card-area">
-
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 id="huh" class="header col s12 red-text text-darken-4">Cool movie, huh? Now here's the music!</h5>
         </div>
       </div>
     </div>
-
-    <div class="parallax-container valign-wrapper">
-      <div class="section no-pad-bot">
-        <div class="container">
-          <div class="row center">
-            <h5 class="header col s12 light btn-large">Cool movie, huh? Now here's the music!</h5>
-          </div>
-        </div>
-      </div>
-      <div class="parallax"><img id='bg-2' src="./assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
-    </div>
+    <div class="parallax"><img id='bg-2' src="./assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
+  </div>
 
 
-    <div class="container">
-      <div class="section">
+  <div class="container">
+    <div class="section">
 
-        <div class="row" id="music-row">
-          <div class="col s12">
-            <div id='soundtrack-card' class="card center">
-              <div class="card-content">
-                <span class="card-title text-white">
-                  <strong>Movie Soundtrack</strong>
-                </span>
-                <table id='tracks' class='highlight'>
-                  <thead>
-                    <th>Song</th>
-                    <th>Artist</th>
-                    <th>Preview</th>
-                  </thead>
-                </table>
-              </div>
+      <div class="row" id="music-row">
+        <div class="col s12">
+          <div id='soundtrack-card' class="card center">
+            <div class="card-content">
+              <span class="card-title text-white">
+                <strong>Movie Soundtrack</strong>
+              </span>
+              <table id='tracks' class='highlight'>
+                <thead>
+                  <th>Song</th>
+                  <th>Artist</th>
+                  <th>Preview</th>
+                </thead>
+              </table>
             </div>
           </div>
         </div>
-
       </div>
 
     </div>
 
+  </div>
 
-    <div class="parallax-container valign-wrapper">
-      <div class="section no-pad-bot">
-        <div class="container">
-          <div class="row center">
 
-            <h5 class="header col s12 light"></h5>
-          </div>
-        </div>
-      </div>
-      <div class="parallax"><img id="bg-3" src="./assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
-    </div>
-
-    <footer class="page-footer teal">
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
       <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Team Matrix</h5>
-            <p class="grey-text text-lighten-4">We are a team of four aspiring (and in training) Full Stack Web
-              Developers and this is our first project.</p>
+        <div class="row center">
 
-          </div>
-
-          <div class="col l6 s12">
-            <h5 class="white-text">Connect</h5>
-            <ul>
-              <li><a class="white-text" href="https://dawnpatrol506.github.io">Kevin Davis</a></li>
-              <li><a class="white-text" href="https://kteacherbecomescoder.github.io">Eric Guerrero</a></li>
-              <li><a class="white-text" href="https://wherding.github.io">Will Herding</a></li>
-              <li><a class="white-text" href="https://benvanmaren.github.io">Ben Van Maren</a></li>
-            </ul>
-          </div>
+          <h5 class="header col s12 light"></h5>
         </div>
       </div>
-    </footer>
+    </div>
+    <div class="parallax"><img id="bg-3" src="./assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
+  </div>
+
+  <footer class="page-footer teal">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Team Matrix</h5>
+          <p class="grey-text text-lighten-4">We are a team of four aspiring (and in training) Full Stack Web
+            Developers and this is our first project.</p>
+
+        </div>
+
+        <div class="col l6 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="https://dawnpatrol506.github.io">Kevin Davis</a></li>
+            <li><a class="white-text" href="https://kteacherbecomescoder.github.io">Eric Guerrero</a></li>
+            <li><a class="white-text" href="https://wherding.github.io">Will Herding</a></li>
+            <li><a class="white-text" href="https://benvanmaren.github.io">Ben Van Maren</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
-    <!--  Scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
-    <script src="assets/javascript/materialize.js"></script>
-    <script src="assets/javascript/init.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
-    <script src="./assets/javascript/functions.js"></script>
-    <script src="./assets/javascript/logic.js"></script>
-    <script>
+  <!--  Scripts-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
+  <script src="assets/javascript/materialize.js"></script>
+  <script src="assets/javascript/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
+  <script src="./assets/javascript/functions.js"></script>
+  <script src="./assets/javascript/logic.js"></script>
+  <script>
 
-      var config = {
-        apiKey: "AIzaSyB0oTpmDKAlzuGtCJhUTjtf9eHhQtiOxlU",
-        authDomain: "project1-15540.firebaseapp.com",
-        databaseURL: "https://project1-15540.firebaseio.com",
-        projectId: "project1-15540",
-        storageBucket: "project1-15540.appspot.com",
-        messagingSenderId: "693020255011"
-      };
-      firebase.initializeApp(config);
-      var db = firebase.database();
-    </script>
+    var config = {
+      apiKey: "AIzaSyB0oTpmDKAlzuGtCJhUTjtf9eHhQtiOxlU",
+      authDomain: "project1-15540.firebaseapp.com",
+      databaseURL: "https://project1-15540.firebaseio.com",
+      projectId: "project1-15540",
+      storageBucket: "project1-15540.appspot.com",
+      messagingSenderId: "693020255011"
+    };
+    firebase.initializeApp(config);
+    var db = firebase.database();
+  </script>
 
 </body>
 
