--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
       </div>
     </div>
 
-  <div class="nav-content">
+  <div class="nav-content hide-on-med-and-down">
     <ul class="tabs">
-      <li class="tab disabled"><a class="grey-text" href='#'>Popular Searches</a></li>
-      <li class="tab"><a class="black-text">Movie 1</a></li>
-      <li class="tab"><a class="black-text">Movie 2</a></li>
-      <li class="tab"><a class="black-text">Movie 3</a></li>
+    
+      
     </ul>
   </div>
   </nav>
