--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 id="title" class="header center red-text text-darken-4">Movies and Music</h1>
       </div>
     </div>
-    <div class="parallax" id="poster"><img id="bg-1" src="./assets/images/background1.jpg" alt="Movie poster"></div>
+    <div class="parallax" id="poster"><img id="bg-1" class="transition-img" src="./assets/images/background1.jpg" alt="Movie poster"></div>
   </div>
 
 
