--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
   <nav class="white nav" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" class="brand-logo">MOVIE SEARCH:</a>
+      <a id="logo-container" class="brand-logo center">MOVIE SEARCH:</a>
       <a href='#' data-target='side-nav' class="sidenav-trigger"><i class="material-icons">search</i></a>
       <div class="input-field right hide-on-med-and-down">
-        <input id="search" type="search">
+        <input id="search" type="search" placeholder="Citizen Kane">
         <label class="label-icon" for="search"><i class="material-icons black-text">search</i></label>
       </div>
     </div>
@@ -27,17 +27,23 @@
 
   <div class="nav-content hide-on-med-and-down">
     <ul class="tabs">
+      <li class="tab disabled black-text"><a id="nav-popular-searches" class="black-text">Popular Searches:</a></li>
     </ul>
   </div>
   </nav>
 
   <ul class="sidenav" id="side-nav">
-    <li>
+    <li class="search">
       <div class="search-wrapper">
-        <input id="side-search" type="search" placeholder="Search">
-        <button type="submit" class="btn light">Submit</button>
+        <input id="side-search" type="search" placeholder="Casablanca">
+        <i class="material-icons sherlock">search</i>
       </div>
     </li>
+    <li><div class="divider"></div></li>
+    <li>
+      <a class="subheader">Popular Searches</a>
+    </li>
+    <li><div class="divider"></div></li>
   </ul>
 
 
@@ -141,7 +147,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img id='bg-2' src="./assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img id='bg-2' class="transition-img" src="./assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 
@@ -181,7 +187,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img id="bg-3" src="./assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img id="bg-3" class="transition-img" src="./assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
